fixed messages + added message overflow scroll

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,7 @@ h1 {
   width:78%;
   margin: 5px;
   border: #000 1px solid;
+  overflow: auto;
 }
 
 .chatbox{
